...
            <Input
              placeholder={
                currentMethod.method === "recoveryCode"
                  ? "xxxxx-xxxxx"
                  : "xxxxxx"
              }
              testID={"input.totp"}
              maxLength={
                currentMethod.method === "recoveryCode" ? undefined : 6
              }
              fwdRef={inputRef}
              textAlign="center"
              onChangeText={(value) => {
...
              containerStyle={{
                minWidth: "50%"
              }}
            />
            {error ? (
              <Paragraph
                testID="account-mfa-error"
                numberOfLines={4}
                onPress={() => {}}
                color={colors.error.accent}
                style={{
                  textAlign: "center",
                  marginVertical: DefaultAppStyles.GAP_VERTICAL_SMALL,
...
