...
              }
            : undefined
        }
      />
      <DelayLayout type="settings">
        <LegendList
          testID="settings-list"
          data={settingsGroups}
          keyExtractor={keyExtractor}
          renderItem={renderItem}
          contentContainerStyle={{
            paddingHorizontal: visual.ios ? visual.pagePadding : 0,
            paddingBottom: visual.ios ? visual.sectionSpacing : 0
...
